デスクトップの保存処理と通知・バックグラウンド処理を実装